feat: v1.1.0 - Enhanced AI configuration and performance improvements
- Added customizable AI prompts for code review and description enhancement
- Implemented dynamic imports for MCP modules to fix TypeScript compilation issues
- Added configuration hot-reload capability for development
- Fixed CLI help formatter recursion issue
- Improved diff strategy with configurable thresholds (2 files for whole diff)
- Enhanced error handling and validation in Bitbucket provider
- Updated default AI settings for better performance (temperature: 0.3, timeout: 10m)
- Added monitoring configuration support
- Cleaned up unused imports and variables

BREAKING CHANGES: None

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@juspay/yama",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Enterprise-grade Pull Request automation toolkit with AI-powered code review and description enhancement",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -86,7 +86,7 @@
   "homepage": "https://github.com/juspay/yama#readme",
   "license": "MIT",
   "author": {
-    "name": "Juspay",
-    "email": "opensource@juspay.in"
+    "name": "Juspay Technologies",
+    "email": "support@juspay.in"
   }
 }
