--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "isolatedModules": true,
     "baseUrl": "./src",
     "paths": {
       "@/*": ["*"],
