--- a/yama.config.example.yaml
+++ b/yama.config.example.yaml
@@ -4,21 +4,21 @@
 # AI Provider Configuration
 providers:
   ai:
-    provider: "auto"  # Options: auto, google-ai, openai, anthropic, azure, bedrock
-    model: "best"     # Model name or "best" for auto-selection
-    temperature: 0.3  # Lower = more focused (0.0-1.0)
-    maxTokens: 2000000  # Maximum tokens for response
-    timeout: "15m"    # Timeout for AI operations
+    provider: "auto" # Options: auto, google-ai, openai, anthropic, azure, bedrock
+    model: "best" # Model name or "best" for auto-selection
+    temperature: 0.3 # Lower = more focused (0.0-1.0)
+    maxTokens: 2000000 # Maximum tokens for response
+    timeout: "15m" # Timeout for AI operations
     enableAnalytics: true
     enableEvaluation: false
 
   # Git Platform Configuration
   git:
-    platform: "bitbucket"  # Options: bitbucket, github, gitlab, azure-devops
+    platform: "bitbucket" # Options: bitbucket, github, gitlab, azure-devops
     credentials:
-      username: "${BITBUCKET_USERNAME}"  # Environment variable
-      token: "${BITBUCKET_TOKEN}"        # Environment variable
-      baseUrl: "${BITBUCKET_BASE_URL}"   # Your Bitbucket server URL
+      username: "${BITBUCKET_USERNAME}" # Environment variable
+      token: "${BITBUCKET_TOKEN}" # Environment variable
+      baseUrl: "${BITBUCKET_BASE_URL}" # Your Bitbucket server URL
 
 # Feature Configuration
 features:
@@ -26,7 +26,14 @@ features:
   codeReview:
     enabled: true
     severityLevels: ["CRITICAL", "MAJOR", "MINOR", "SUGGESTION"]
-    categories: ["security", "performance", "maintainability", "functionality", "error_handling"]
+    categories:
+      [
+        "security",
+        "performance",
+        "maintainability",
+        "functionality",
+        "error_handling",
+      ]
     excludePatterns:
       - "*.lock"
       - "*.svg"
@@ -38,7 +45,7 @@ features:
       - "dist/**"
       - "build/**"
       - "vendor/**"
-    contextLines: 3  # Lines of context around changes
+    contextLines: 3 # Lines of context around changes
     focusAreas:
       - "Security vulnerabilities"
       - "Performance bottlenecks"
@@ -48,7 +55,7 @@ features:
   # Description Enhancement Configuration
   descriptionEnhancement:
     enabled: true
-    preserveContent: true  # Always preserve existing content
+    preserveContent: true # Always preserve existing content
     autoFormat: true
     requiredSections:
       - key: "changelog"
@@ -65,36 +72,36 @@ features:
   diffStrategy:
     enabled: true
     thresholds:
-      wholeDiffMaxFiles: 2      # Use whole diff for ≤2 files
-      fileByFileMinFiles: 3     # Use file-by-file for ≥3 files
+      wholeDiffMaxFiles: 2 # Use whole diff for ≤2 files
+      fileByFileMinFiles: 3 # Use file-by-file for ≥3 files
     # Optional: Force a specific strategy regardless of file count
     # forceStrategy: "file-by-file"  # Options: whole, file-by-file, auto
 
   # Security Scan Configuration (Future)
   securityScan:
     enabled: false
-    level: "strict"  # Options: strict, moderate, basic
+    level: "strict" # Options: strict, moderate, basic
     scanTypes: ["dependencies", "secrets", "vulnerabilities"]
 
   # Analytics Configuration (Future)
   analytics:
     enabled: false
     trackMetrics: true
-    exportFormat: "json"  # Options: json, csv, yaml
+    exportFormat: "json" # Options: json, csv, yaml
 
 # Cache Configuration
 cache:
   enabled: true
-  ttl: "30m"  # Time to live for cache entries
+  ttl: "30m" # Time to live for cache entries
   maxSize: "100MB"
-  storage: "memory"  # Options: memory, redis, file
+  storage: "memory" # Options: memory, redis, file
 
 # Performance Configuration
 performance:
   batch:
     enabled: true
-    maxConcurrent: 5      # Max concurrent API calls
-    delayBetween: "1s"    # Delay between batches
+    maxConcurrent: 5 # Max concurrent API calls
+    delayBetween: "1s" # Delay between batches
   optimization:
     reuseConnections: true
     compressRequests: false
@@ -108,7 +115,7 @@ rules:
       severity: "CRITICAL"
       message: "Hardcoded secrets detected"
       suggestion: "Use environment variables or secure configuration"
-    
+
     - name: "SQL injection prevention"
       pattern: "query\\([^?]+\\+.*\\)"
       severity: "CRITICAL"
