--- a/yama.config.example.yaml
+++ b/yama.config.example.yaml
@@ -7,7 +7,7 @@ providers:
     provider: "auto" # Options: auto, google-ai, openai, anthropic, azure, bedrock
     model: "best" # Model name or "best" for auto-selection
     temperature: 0.3 # Lower = more focused (0.0-1.0)
-    maxTokens: 2000000 # Maximum tokens for response
+    maxTokens: 60000 # Maximum tokens for response (provider-aware limits will be applied automatically)
     timeout: "15m" # Timeout for AI operations
     enableAnalytics: true
     enableEvaluation: false
@@ -141,3 +141,12 @@ monitoring:
   metrics: ["api_calls", "cache_hits", "processing_time"]
   exportFormat: "prometheus"
   interval: "1m"
+
+# Memory Bank Configuration
+memoryBank:
+  enabled: true
+  path: "memory-bank"  # Primary path to look for memory bank files
+  fallbackPaths:       # Optional fallback paths if primary doesn't exist
+    - "docs/memory-bank"
+    - ".memory-bank"
+    - "project-docs/context"
