refactor(review): refactored code to allow PR review file-by-file
* **Memory:** support memory bank path and maxToken from config file ([1bc69d5](https://github.com/juspay/yama/commit/1bc69d5bda3ac5868d7537b881007beaf6916476))

--- a/memory-bank/progress.yml
+++ b/memory-bank/progress.yml
@@ -1,7 +1,7 @@
 project_status:
-  overall_completion: "85%"
+  overall_completion: "90%"
   phase: "Production Ready"
-  last_updated: "2025-01-25"
+  last_updated: "2025-01-29"
 
 completed_milestones:
   - name: "Core Architecture"
@@ -44,6 +44,15 @@ completed_milestones:
       - "Lint compliance (0 errors)"
       - "Build system optimization"
 
+  - name: "Batch Processing System"
+    completion_date: "2025-01-29"
+    deliverables:
+      - "Comprehensive batch processing for large PRs"
+      - "Security-first file prioritization"
+      - "Provider-aware token management"
+      - "Graceful error handling and progress tracking"
+      - "Enhanced file path matching and validation"
+
 current_features:
   implemented:
     - "Bitbucket integration"
@@ -67,6 +76,16 @@ current_features:
     - "Webhook automation"
 
 recent_improvements:
+  - date: "2025-01-29"
+    changes:
+      - "Implemented comprehensive batch processing system for large PRs"
+      - "Added security-first file prioritization (auth, payment, crypto files first)"
+      - "Enhanced provider-aware token management with 70% safety margins"
+      - "Improved file path matching with multiple variation support"
+      - "Added quality-first AI configuration with 2M+ token limits"
+      - "Enhanced code snippet validation and fuzzy matching"
+      - "Added comprehensive batch progress tracking and error reporting"
+
   - date: "2025-08-05"
     changes:
       - "CRITICAL FIX: Resolved AI token limit error for Vertex AI"
